2017-03-15  Per Bothner  <per@bothner.com>

	* FString.java (<init>): Minor optimization.

2017-03-10  Per Bothner  <per@bothner.com>

	String viewed as vector works same as string-ref.
	I.e. a string is a list of Unicode chars (with no #\ignorable-char).
	* FString.java: Major re-write.
	* CharSeq.java (subSequence, consume): Remove methods.
	* SubCharSeq.java: Remove - no longer needed.

2017-02-28  Per Bothner  <per@bothner.com>

	* CharSeq.java (fill): Remove two 'fill' methods.
	They aren't used any more as they don't work for non-BMP characters.
	* FString.java (fill): Remove methods.
	* SubCharSeq.java (fill): Likewise.

2017-02-03  Per Bothner  <per@bothner.com>

	* PrimVector.template (cast, castOrNull): New methods.
	* CharVector.java (cast, castOrNull): Likewise.
	* FVector.java (cast, castOrNull): Likewise.

2017-01-17  Per Bothner  <per@bothner.com>

	* IString.java (SubString): New class for substring of an IString.
	Generalize methods to handle plain IString as well as SubString.
	(valueOf): New factory method.
	* Strings.java (compareTo): New static method.

2016-12-03  Per Bothner  <per@bothner.com>

	* FString.java: Simplify set of constructors.

	* IString.java (valueOf): New factory method.
	(toCharArray, getBytes(String)): New methods.

2016-11-28  Per Bothner  <per@bothner.com>

	* IString.java: Implement Comparable.
	(compareTo): New method.
	(hashCode, equals): New methods.
	* Strings.java (offsetByCodePoints): Fix logic bug.

	* AbstractSequence.java (setAt): New method - more efficient than set.

2016-11-27  Per Bothner  <per@bothner.com>

	* AbstractSequence.java: Trivial inlining.

2016-10-15  Per Bothner  <per@bothner.com>

	* PrimVector.template: Fix incorrect edits in generated files by making here instead.
	(FVector.makConstant, FVector.replaceAll, ByteVector.writeTo): New methods.
	* ByteVector.java: Re-generated.
	* FVector.java: Re-generated.

2016-10-11  Per Bothner  <per@bothner.com>
