@@ -1,5 +1,8 @@
 2017-03-15  Per Bothner  <per@bothner.com>
 
+	* strings.scm (string-replicate): New procedure.
+	* kawa/base.scm: Define it by default.
+
 	* strings.scm (make-string): Default count to zero.
 
 2017-02-27  Per Bothner  <per@bothner.com>
